Senior_Project/src/senior/project/test/server/errors/ServerInvalidHeightException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidHeightException extends Exception {

  public ServerInvalidHeightException(String msg) {
    super(msg);
  }
}
